<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_reading"
        android:textColor="@color/black"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/systolic"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"
            android:id="@+id/reading_sys_txt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diastolic"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"
            android:id="@+id/reading_dia_txt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_rate"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"
            android:id="@+id/reading_rate_txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"
            android:id="@+id/reading_status_txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="left"
            android:id="@+id/reading_date_txt"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_transparent"
            android:layout_margin="10dp"
            android:id="@+id/btn_share_reading_cancel"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/bg_transparent"
            android:layout_margin="10dp"
            android:text="@string/share"
            android:id="@+id/btn_share_reading"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>