<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reading.DataTransferActivity">
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <ProgressBar
        android:id="@+id/progress_start"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/txt_status"
        android:fontFamily="@font/arial"
        android:textColor="?android:textColorPrimary"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/actual_status"
        android:fontFamily="@font/arial"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@+id/txt_status"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:id="@+id/txt_battery"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@+id/actual_status"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/arial"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="70dp"/>

    <TextView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/battery_level"
        android:layout_toEndOf="@+id/txt_battery"
        android:layout_marginLeft="8dp"
        android:textColor="?android:textColorPrimary"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/arial"
        android:layout_marginRight="8dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/read"
        android:id="@+id/btn_read"
        android:layout_margin="8dp"
        android:layout_below="@+id/txt_status"
        android:src="@drawable/ic_baseline_add_circle_24" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_val"
        android:layout_margin="8dp"
        android:layout_toEndOf="@+id/btn_read"
        android:fontFamily="@font/arial"
        android:layout_below="@id/txt_status"
        android:text="@string/read"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/systa"
        android:text="@string/systolic"
        android:fontFamily="@font/arial"
        android:textColor="?android:textColorPrimary"
        android:layout_below="@+id/btn_read"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/systalic_val"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@+id/systa"
        android:fontFamily="@font/arial"
        android:layout_below="@+id/btn_read"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/diasta"
        android:textColor="?android:textColorPrimary"
        android:text="@string/diastolic"
        android:fontFamily="@font/arial"
        android:layout_below="@+id/systa"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dystalic_val"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@+id/diasta"
        android:fontFamily="@font/arial"
        android:layout_below="@+id/systalic_val"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate"
        android:text="@string/heart_rate"
        android:fontFamily="@font/arial"
        android:textColor="?android:textColorPrimary"
        android:layout_below="@+id/diasta"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate_val"
        android:fontFamily="@font/arial"
        android:layout_toEndOf="@+id/rate"
        android:textColor="?android:textColorPrimary"
        android:layout_below="@+id/dystalic_val"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/range"
        android:text="@string/map"
        android:fontFamily="@font/arial"
        android:textColor="?android:textColorPrimary"
        android:layout_below="@+id/rate"
        android:layout_margin="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/range_val"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@+id/range"
        android:fontFamily="@font/arial"
        android:layout_below="@+id/rate_val"
        android:layout_margin="8dp"/>

</RelativeLayout>